@@ -7,21 +7,23 @@
   border-radius: 5px;
 }
 
-.info h4 {
-  margin: 0 0 5px;
-  color: #777;
+.info p {
+  color: black;
+  margin: 0;
 }
 
 .legend {
-  text-align: left;
+  text-align: center;
   line-height: 18px;
   color: #555;
+  display: 'flex';
+  justify-content: center;
 }
 
 .legend i {
   width: 18px;
   height: 18px;
+  opacity: 1;
+  overflow: hidden;
   float: left;
-  margin-right: 8px;
-  opacity: 0.7;
 }
