@@ -1,16 +1,24 @@
 import React, { useEffect, useState } from 'react';
 import '../styles/map.css';
-import { MapContainer, TileLayer, MapConsumer } from 'react-leaflet';
+import { MapContainer, TileLayer } from 'react-leaflet';
 import 'leaflet/dist/leaflet.css';
 import 'leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.webpack.css'; // Re-uses images from ~leaflet package
 import 'leaflet-defaulticon-compatibility';
 import { Row, Col, Jumbotron } from 'react-bootstrap';
-import { getDataWhereQuery, pageView } from '../utils/firebaseUtils';
+import {
+  getDataWhereQuery,
+  pageView,
+  getDataFromCollection,
+} from '../utils/firebaseUtils';
 import laguna from '../geoJSON/laguna.json';
 import GeoJSONMap from '../components/GeoJSONMap';
 import MapControls from '../components/MapControls';
 import SpinnerPlaceholder from '../components/SpinnerPlaceholder';
-import { crimeTypes } from '../dashboard utils/constants';
+import { crimeTypes, municipalities } from '../dashboard utils/constants';
+import CommunityMapLegend from '../components/CommunityMapLegend';
+import { colors } from '../components/MapLegend';
+import L from 'leaflet';
+
 function Maps() {
   useEffect(() => {
     pageView('webapp');
@@ -23,9 +31,33 @@ function Maps() {
   const [crime, setCrime] = useState();
   const [loading, setLoading] = useState(false);
   const [filtered, setFiltered] = useState();
-  const [selectedCount, setSelectedCount] = useState(0);
+
   const [dominantPercentage, setDominantPercentage] = useState({});
   const zoomLevel = 10;
+  const [count, setCount] = useState();
+  ////get all reports
+  useEffect(() => {
+    getDataFromCollection('reports', (res) => {
+      const count = [];
+      if (res) {
+        if (res.length > 0) {
+          res.forEach((report) => {
+            const matched = municipalities.find(
+              (element) =>
+                element.value === report.description.municipality.value
+            );
+            count.push(matched.value);
+          });
+
+          const frequency = count.reduce(
+            (prev, curr) => ((prev[curr] = ++prev[curr] || 1), prev), // eslint-disable-line no-sequences
+            {}
+          );
+          setCount(frequency);
+        }
+      }
+    });
+  }, []);
 
   useEffect(() => {
     function getData(id) {
@@ -45,21 +77,59 @@ function Maps() {
       getData(selectedPane.value);
     }
   }, [selectedPane]);
+  function onEachProvince(province, layer) {
+    const keys = Object.keys(count);
+    keys.forEach((key) => {
+      if (province.properties.MUNICIPALI === key) {
+        layer.setStyle({
+          color: colors(count[`${key}`]),
+          fillColor: colors(count[`${key}`]),
+          weight: 0.5,
+        });
+      }
+    });
+    const currentMunicipality = municipalities.find(
+      (item) => item.value === province.properties.MUNICIPALI
+    );
+    const municipality = `<h2>${currentMunicipality.label}</h2>`;
+    layer.bindPopup(municipality, {
+      closeButton: false,
+      offset: L.point(0, 5),
+    });
+    layer.on('click', (e) => {
+      setSelectedPane(currentMunicipality);
+
+      map.flyToBounds(e.target._bounds, {
+        animate: true,
+        duration: 1,
+        easeLinearity: 1,
+      });
+    });
+    layer.on('mouseover', () => {
+      layer.setStyle({
+        color: 'blue',
+      });
+    });
+    layer.on('mouseout', () => {
+      layer.setStyle({
+        color: `green`,
+      });
+    });
+  }
 
   useEffect(() => {
-    if (!data) return null;
-    if (!crime) return null;
+    if (data == null) return null;
+    if (crime == null) return null;
     if (data.length === 0) return setFiltered([]);
 
     setLoading(true);
     setDominantPercentage(null);
-    setSelectedCount(0);
-    setFiltered(null);
+
+    setFiltered([]);
 
     function formatData() {
       ///when the user selects all, this code will get the percentage of ALL the crime types
       if (crime.value === 'all') {
-        setSelectedCount(data.length);
         let keys = [];
         let temp = [];
         let tempPercentage = [];
@@ -94,7 +164,8 @@ function Maps() {
       } else {
         let temp = [];
         let crimeTypeArray = [];
-        data.reduce(
+        let tempData = [...data];
+        tempData.reduce(
           (accu, curr) =>
             curr.description.violation.value === crime.value
               ? (temp.push(curr),
@@ -105,7 +176,7 @@ function Maps() {
 
         ////generates the percentage of crime of the selected crime type. demonic code
         for (let i = 0; i < crimeTypeArray.length; i++) {
-          let num = data.reduce(
+          let num = tempData.reduce(
             (accu, curr) =>
               curr.description.violation.value === crimeTypeArray[i].value
                 ? accu + 1
@@ -113,8 +184,8 @@ function Maps() {
             null
           );
           ////set the total count of the selected crime type
-          setSelectedCount(num);
-          let tempPercentage = (num / data.length) * 100;
+
+          let tempPercentage = (num / tempData.length) * 100;
           setDominantPercentage({
             percent: tempPercentage,
             type: crimeTypeArray[i],
@@ -146,7 +217,7 @@ function Maps() {
                     )}
                   </Row>
                   <Row
-                    className='border w-100 h-100'
+                    className='w-100 h-100'
                     style={{
                       display: 'flex',
                       justifyContent: 'center',
@@ -167,16 +238,18 @@ function Maps() {
                           <div
                             style={{ textAlign: 'center', marginTop: '10px' }}
                           >
-                            <h1>{selectedCount}</h1>
-                            <p>Incidents</p>
-
                             {dominantPercentage && (
                               <div>
                                 <h1 style={{ color: 'red' }}>
                                   {dominantPercentage.percent.toFixed(2)}%
                                 </h1>
                                 <p>
-                                  {dominantPercentage.type.label} Percentage
+                                  of all crimes in {selectedPane.label} are{' '}
+                                  <span
+                                    style={{ fontWeight: 'bold', color: 'red' }}
+                                  >
+                                    {dominantPercentage.type.label}
+                                  </span>
                                 </p>
                               </div>
                             )}
@@ -189,20 +262,28 @@ function Maps() {
                                 )}
                                 <p>Most dominant crime</p>
                                 <Row>
-                                  {filtered &&
-                                    filtered.map((percentage, index) => {
-                                      if (index === 0) return null;
-                                      if (index === filtered.length - 1)
-                                        return null;
-                                      return (
-                                        <Col key={index}>
-                                          <h2>
-                                            {percentage.percent.toFixed(2)}%
-                                          </h2>
-                                          <p>{percentage.type.label}</p>
-                                        </Col>
-                                      );
-                                    })}
+                                  {filtered.length > 0
+                                    ? filtered.map((percentage, index) => {
+                                        if (index === 0) return null;
+                                        if (index === filtered.length - 1)
+                                          return null;
+                                        return (
+                                          <Col key={index}>
+                                            <h2>
+                                              {percentage.percent
+                                                ? `${percentage.percent.toFixed(
+                                                    2
+                                                  )}%`
+                                                : '0%'}
+                                            </h2>
+                                            <p>
+                                              {percentage.type &&
+                                                `${percentage.type.label}`}
+                                            </p>
+                                          </Col>
+                                        );
+                                      })
+                                    : null}
                                 </Row>
                               </div>
                             )}
@@ -214,41 +295,41 @@ function Maps() {
                 </Col>
                 <Col xs={12} md={8} lg={6}>
                   <Row>
-                    <MapContainer
-                      center={[14.277, 121.35]}
-                      zoom={zoomLevel}
-                      scrollWheelZoom={false}
-                      zoomControl={false}
-                      dragging={false}
-                      style={{
-                        height: '600px',
-                        minWidth: '100%',
-                        margin: 'auto',
-                        zIndex: 1,
-                      }}
-                      doubleClickZoom={false}
-                      whenCreated={setMap}
-                    >
-                      <MapConsumer>
-                        {(map) => {
-                          return (
-                            <GeoJSONMap
-                              data={laguna}
-                              path={{ color: 'green', weight: 1 }}
-                              map={map}
-                              selector={setSelectedPane}
-                            />
-                          );
+                    {count && (
+                      <MapContainer
+                        center={[14.277, 121.35]}
+                        zoom={zoomLevel}
+                        scrollWheelZoom={false}
+                        zoomControl={false}
+                        dragging={false}
+                        style={{
+                          height: '600px',
+                          minWidth: '100%',
+                          margin: 'auto',
+                          zIndex: 1,
                         }}
-                      </MapConsumer>
-                      <TileLayer
-                        url='https://tile.jawg.io/jawg-dark/{z}/{x}/{y}{r}.png?access-token=89WuphSbH8Ve5snRY7jsFAlgJwwBc3qNxH6U6x7uyzcPQWzn7JwqWiMsHh9x1qJg'
-                        draggable={false}
-                        attribution={
-                          '<a href="https://www.jawg.io" target="_blank">&copy; Jawg</a> - <a href="https://www.openstreetmap.org" target="_blank">&copy; OpenStreetMap</a>&nbsp;contributors'
-                        }
-                      />
-                    </MapContainer>
+                        doubleClickZoom={false}
+                        whenCreated={setMap}
+                      >
+                        <CommunityMapLegend map={map} />
+
+                        {map && (
+                          <GeoJSONMap
+                            data={laguna}
+                            path={{ color: 'green', weight: 1 }}
+                            onEachFeature={onEachProvince}
+                          />
+                        )}
+
+                        <TileLayer
+                          url='https://tile.jawg.io/jawg-dark/{z}/{x}/{y}{r}.png?access-token=89WuphSbH8Ve5snRY7jsFAlgJwwBc3qNxH6U6x7uyzcPQWzn7JwqWiMsHh9x1qJg'
+                          draggable={false}
+                          attribution={
+                            '<a href="https://www.jawg.io" target="_blank">&copy; Jawg</a> - <a href="https://www.openstreetmap.org" target="_blank">&copy; OpenStreetMap</a>&nbsp;contributors'
+                          }
+                        />
+                      </MapContainer>
+                    )}
                   </Row>
                 </Col>
                 <Col className='w-100'>
